--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,3 +44,9 @@ ul.line_link_space > li > div:hover{
 .inputs_paddings{
     padding: 4px 20px;
 }
+
+..list_link_event_box  .list_link_event { 
+    width: 250px !important; 
+    min-height: 14px; 
+    float: left;
+}
